OpaqueJSString doesn't optimally handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=98300

Reviewed by Geoffrey Garen.

Change OpaqueJSString to store and manage a String instead of a UChar buffer.
The member string is a copy of any string used during creation.

* API/OpaqueJSString.cpp:
(OpaqueJSString::create):
(OpaqueJSString::identifier):
* API/OpaqueJSString.h:
(OpaqueJSString::characters):
(OpaqueJSString::length):
(OpaqueJSString::string):
(OpaqueJSString::OpaqueJSString):
(OpaqueJSString):


Canonical link: https://commits.webkit.org/116341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130344 268f45cc-cd09-0410-ab3c-d52691b4dbfc