Source/JavaScriptCore/API/OpaqueJSString.h
@@ -48,35 +48,35 @@ struct OpaqueJSString : public ThreadSafeRefCounted<OpaqueJSString> {
 
     JS_EXPORT_PRIVATE static PassRefPtr<OpaqueJSString> create(const String&);
 
-    UChar* characters() { return this ? m_characters : 0; }
-    unsigned length() { return this ? m_length : 0; }
+    const UChar* characters() { return !!this ? m_string.characters() : 0; }
+    unsigned length() { return !!this ? m_string.length() : 0; }
 
-    String string() const;
+    String string() const { return !!this ? m_string : String(); };
     JSC::Identifier identifier(JSC::JSGlobalData*) const;
 
 private:
     friend class WTF::ThreadSafeRefCounted<OpaqueJSString>;
 
     OpaqueJSString()
-        : m_characters(0)
-        , m_length(0)
     {
+        m_string = emptyString();
+    }
+
+    OpaqueJSString(const String& string)
+    {
+        // Make a copy of the source string.
+        if (string.is8Bit())
+            m_string = String(string.characters8(), string.length());
+        else
+            m_string = String(string.characters16(), string.length());
     }
 
     OpaqueJSString(const UChar* characters, unsigned length)
-        : m_length(length)
     {
-        m_characters = new UChar[length];
-        memcpy(m_characters, characters, length * sizeof(UChar));
+        m_string = String(characters, length);
     }
 
-    ~OpaqueJSString()
-    {
-        delete[] m_characters;
-    }
-
-    UChar* m_characters;
-    unsigned m_length;
+    String m_string;
 };
 
 #endif
